# hybrid-rag-nextjs

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README-hf.md  README.md  pyproject.toml  supervisord.conf
.github/workflows/: rag_eval.yml  sync-to-hf.yml
api/: main.py
chroma_db/: chroma.sqlite3
chroma_db/5a3924f4-bbcc-4c84-83a8-a98dce711998/: index_metadata.pickle
dataset/: arxiv_10k.json  evaluation_qa_dataset.json  evaluation_seed_papers.json
docs/: api.md  architecture.md  design-system.md  roadmap.md
evaluation/: evaluate_rag.py  evaluation_qa_dataset_5.json
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Providers.tsx
frontend/components/ask/: AnswerCard.tsx  ChatInput.tsx  ChatThread.tsx  DebugPanel.tsx  LatencyBadge.tsx  OnboardingCard.tsx  PaperFilterBar.tsx  QueryHistory.tsx  SampleQuestions.tsx  SearchBar.tsx  SettingsPanel.tsx  SourceDocuments.tsx
frontend/components/evaluation/: EvaluationView.tsx  FaithfulnessScore.tsx  LogStream.tsx  ResultsTable.tsx  RunEvalButton.tsx
frontend/components/layout/: NavBar.tsx  Sidebar.tsx  TabNav.tsx
frontend/lib/: api.ts  theme.ts
frontend/types/: rag.ts
observability/: langfuse_client.py
results/: rag_evaluation_results.csv
src/: main.py  utils.py
test/: paper_extract.py  test_ragas_local.py
ui/: app.py  components.py  config.py  evaluation.py  pipeline.py
